<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:orientation="vertical"
    android:weightSum="1">

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/imageButton6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/a1"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="3dp" />

    <TextView
        android:id="@+id/textView0"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/id_b"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EdittextIDbusq"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:inputType="number" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rb"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limpiar"
        android:textAlignment="center"
        android:textStyle="bold" />

</LinearLayout>